# internal/models/teacher.go
@@ -1,6 +1,0 @@
-package models
-
-type Teacher struct {
-	Login string
-	Id    int
-}
